using System;

namespace Second
{
    public class TestModel : IDisposable
    {
        public TestModel()
        {
        }
        
        public void Dispose()
        {
        }
    }
}