@startuml
'https://plantuml.com/class-diagram
namespace First{
class TestView
class TestModel
class TestPresenter

TestPresenter --> TestModel
TestPresenter --> TestView
}

namespace Second{
class MonoBehavior

class TestView
class TestModel
class TestPresenter
class TestController

TestController --> TestPresenter
TestController --> TestView
TestController --> TestModel

TestPresenter -->TestModel
TestPresenter-->TestView

TestController --|> MonoBehavior
TestView --|> MonoBehavior
}
@enduml